2010-12-23  Jordan Uggla  <jordan.uggla@gmail.com>

	* tests/util/grub-shell.in: Suppress "ACPI shutdown failed" error to
	keep unit tests from failing when they shouldn't.

2010-12-21  Colin Watson  <cjwatson@ubuntu.com>

	* include/grub/offsets.h (GRUB_KERNEL_I386_PC_RAW_SIZE): The
	previous patch increased the size of the RS code by 20 bytes (at
	least with gcc-4.4), so increase this by 20 bytes to match.
	(GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART): Likewise.

2010-12-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/lib/reed_solomon.c (gauss_solve): Fix size of standalone
	scratch area.  Make sure to initialise chosen in standalone mode as
	well as non-standalone.
	Reported by: Robert Hooker and Andy Whitcroft.
	Tested by: Andy Whitcroft.

2010-12-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/echo.c (grub_cmd_echo): Make UTF-8-clean by
	constructing a new unescaped string and passing it to grub_xputs in
	one go, rather than passing characters to grub_printf one at a time.

2010-12-21  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/fs/udf.c (read_string): Pacify GCC warning by
	initialising utf16.

2010-12-21  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (gettext_quoted): Add clarifying
	comment.  Add an extra layer of quotation, requiring the output of
	this function to be used in a printf format string.
	(gettext_printf): New function.
	* util/grub.d/10_hurd.in: Use gettext_printf where appropriate.
	Extract translatable strings from here-documents and use a temporary
	variable instead, so that xgettext can find them.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub.d/20_linux_xen.in: Likewise.

	* po/grub.d.sed: New file.
	* po/Makefile.in.in ($(DOMAIN).pot-update): Extract gettext_printf
	arguments.  Set c-format flags on all strings extracted from
	util/grub.d/ (xgettext refuses to include these itself for strings