@@ -1,3 +1,10 @@
+2010-12-25  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/commands/acpihalt.c (grub_acpi_halt): Sleep for 1.5 before
+	writing an error message because of async power management.
+	* grub-core/kern/mips/yeeloong/init.c (grub_halt): Likewise.
+	(grub_reboot): Likewise.
+
 2010-12-23  Jordan Uggla  <jordan.uggla@gmail.com>
 
 	* tests/util/grub-shell.in: Suppress "ACPI shutdown failed" error to
